<resources>
    <string name="app_name">Second-PC-Store</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="store_fragment_label">Store Fragment</string>
    <string name="profile_fragment_label">Profile Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="bt_Login">LOG IN</string>
    <string name="bt_SingIn">SING IN</string>
    <string name="bt_SingUp">SING UP</string>
    <string name="bt_LogOut">LOG OUT</string>
    <string name="eT_Email">Put your e-mail address</string>
    <string name="eT_Pass">Put your password</string>
    <string name="helper_tx">Required*</string>
    <string name="tV_Required">Required</string>
    <string name="tV_RequiredEmpty"></string>
    <string name="tV_Presentation">Buy and Sell at the best price</string>
    <string name="tV_Presentation_Land">
        <br>Best Institute</br>
        <br>of</br>
        <br>Andalusia</br>
    </string>
    <string name="tV_Have">Already have an account?</string>
    <string name="tV_DontHave">Don`t have an account?</string>
    <string name="tV_SignUp">Sing up</string>
    <string name="tV_WaitingYou">Waiting you enjoy the experience</string>
    <string name="txInput_Name">Name</string>
    <string name="txInput_LastName">LastName</string>
    <string name="txInput_User">User</string>
    <string name="txInput_Pass">Password</string>
    <string name="txInput_ConfirmPass">Confirm password</string>
    <string name="txInput_UrlUserPic">Upload a picture</string>
    <string name="contentDescrip_iView_Logo">Company\'s logo</string>
</resources>