<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.fragment.SecondFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_V0_Second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_V1_Second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_H0_Second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_H1_Second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_H2_Second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_H3_Second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />


    <ImageView
        android:id="@+id/iView_Logo_Second"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/contentDescrip_iView_Logo"
        android:rotation="270"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline_H1_Second"
        app:layout_constraintEnd_toStartOf="@+id/tv_WaitingYou"
        app:layout_constraintStart_toStartOf="@+id/guideline_V0_Second"
        app:layout_constraintTop_toBottomOf="@+id/guideline_H0_Second" />

    <TextView
        android:id="@+id/tv_WaitingYou"
        style="@style/tV_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tV_WaitingYou"
        app:layout_constraintBottom_toTopOf="@+id/guideline_H1_Second"
        app:layout_constraintEnd_toEndOf="@+id/guideline_V1_Second"
        app:layout_constraintStart_toEndOf="@+id/iView_Logo_Second"
        app:layout_constraintTop_toBottomOf="@+id/guideline_H0_Second" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bt_LogIn_Second"
        app:layout_constraintEnd_toEndOf="@+id/guideline_V1_Second"
        app:layout_constraintStart_toStartOf="@+id/guideline_V0_Second"
        app:layout_constraintTop_toBottomOf="@+id/guideline_H1_Second">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txInput_UserName_Second"
                    style="@style/inputText_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txInput_User"
                    app:expandedHintEnabled="true"
                    app:helperText="@string/helper_tx"
                    app:layout_constraintBottom_toTopOf="@+id/txInput_Pass_Second"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_baseline_account_box_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txSize_ET_Style" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txInput_Pass_Second"
                    style="@style/inputText_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txInput_Pass"
                    app:endIconDrawable="@drawable/ic_baseline_remove_red_eye_24"
                    app:expandedHintEnabled="true"
                    app:helperText="@string/helper_tx"
                    app:layout_constraintBottom_toTopOf="@+id/txInput_ConfirmPass"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txInput_UserName_Second"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txSize_ET_Style" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txInput_ConfirmPass"
                    style="@style/inputText_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txInput_ConfirmPass"
                    app:endIconDrawable="@drawable/ic_baseline_remove_red_eye_24"
                    app:expandedHintEnabled="true"
                    app:helperText="@string/helper_tx"
                    app:layout_constraintBottom_toTopOf="@+id/txInput_UrlUserPic_Second"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txInput_Pass_Second"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_refresh_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txSize_ET_Style" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txInput_UrlUserPic_Second"
                    style="@style/inputText_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txInput_UrlUserPic"
                    app:expandedHintEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/bt_SignUp_Second"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txInput_ConfirmPass"
                    app:startIconDrawable="@drawable/ic_baseline_image_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txSize_ET_Style" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/bt_SignUp_Second"
                    style="@style/bt_Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_SingUp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txInput_UrlUserPic_Second" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_Have"
        style="@style/tV_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tV_Have"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_LogIn_Second"
        app:layout_constraintEnd_toStartOf="@+id/bt_LogIn_Second"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_LogIn_Second"
        style="@style/bt_TextButton_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_Login"
        app:layout_constraintBottom_toTopOf="@+id/guideline_H3_Second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/tv_Have" />

</androidx.constraintlayout.widget.ConstraintLayout>